add entx + json
