# internal/datumclient/models.go
@@ -744,6 +744,180 @@ type PageInfo struct {
 	EndCursor *string `json:"endCursor,omitempty"`
 }
 
+type RefreshToken struct {
+	ID                      string    `json:"id"`
+	ClientID                string    `json:"clientID"`
+	Nonce                   string    `json:"nonce"`
+	ClaimsUserID            string    `json:"claimsUserID"`
+	ClaimsUsername          string    `json:"claimsUsername"`
+	ClaimsEmail             string    `json:"claimsEmail"`
+	ClaimsEmailVerified     bool      `json:"claimsEmailVerified"`
+	ClaimsPreferredUsername string    `json:"claimsPreferredUsername"`
+	ConnectorID             string    `json:"connectorID"`
+	Token                   string    `json:"token"`
+	ObsoleteToken           string    `json:"obsoleteToken"`
+	LastUsed                time.Time `json:"lastUsed"`
+}
+
+func (RefreshToken) IsNode() {}
+
+// RefreshTokenWhereInput is used for filtering RefreshToken objects.
+// Input was generated by ent.
+type RefreshTokenWhereInput struct {
+	Not *RefreshTokenWhereInput   `json:"not,omitempty"`
+	And []*RefreshTokenWhereInput `json:"and,omitempty"`
+	Or  []*RefreshTokenWhereInput `json:"or,omitempty"`
+	// id field predicates
+	ID             *string  `json:"id,omitempty"`
+	IDNeq          *string  `json:"idNEQ,omitempty"`
+	IDIn           []string `json:"idIn,omitempty"`
+	IDNotIn        []string `json:"idNotIn,omitempty"`
+	IDGt           *string  `json:"idGT,omitempty"`
+	IDGte          *string  `json:"idGTE,omitempty"`
+	IDLt           *string  `json:"idLT,omitempty"`
+	IDLte          *string  `json:"idLTE,omitempty"`
+	IDEqualFold    *string  `json:"idEqualFold,omitempty"`
+	IDContainsFold *string  `json:"idContainsFold,omitempty"`
+	// client_id field predicates
+	ClientID             *string  `json:"clientID,omitempty"`
+	ClientIDNeq          *string  `json:"clientIDNEQ,omitempty"`
+	ClientIDIn           []string `json:"clientIDIn,omitempty"`
+	ClientIDNotIn        []string `json:"clientIDNotIn,omitempty"`
+	ClientIDGt           *string  `json:"clientIDGT,omitempty"`
+	ClientIDGte          *string  `json:"clientIDGTE,omitempty"`
+	ClientIDLt           *string  `json:"clientIDLT,omitempty"`
+	ClientIDLte          *string  `json:"clientIDLTE,omitempty"`
+	ClientIDContains     *string  `json:"clientIDContains,omitempty"`
+	ClientIDHasPrefix    *string  `json:"clientIDHasPrefix,omitempty"`
+	ClientIDHasSuffix    *string  `json:"clientIDHasSuffix,omitempty"`
+	ClientIDEqualFold    *string  `json:"clientIDEqualFold,omitempty"`
+	ClientIDContainsFold *string  `json:"clientIDContainsFold,omitempty"`
+	// nonce field predicates
+	Nonce             *string  `json:"nonce,omitempty"`
+	NonceNeq          *string  `json:"nonceNEQ,omitempty"`
+	NonceIn           []string `json:"nonceIn,omitempty"`
+	NonceNotIn        []string `json:"nonceNotIn,omitempty"`
+	NonceGt           *string  `json:"nonceGT,omitempty"`
+	NonceGte          *string  `json:"nonceGTE,omitempty"`
+	NonceLt           *string  `json:"nonceLT,omitempty"`
+	NonceLte          *string  `json:"nonceLTE,omitempty"`
+	NonceContains     *string  `json:"nonceContains,omitempty"`
+	NonceHasPrefix    *string  `json:"nonceHasPrefix,omitempty"`
+	NonceHasSuffix    *string  `json:"nonceHasSuffix,omitempty"`
+	NonceEqualFold    *string  `json:"nonceEqualFold,omitempty"`
+	NonceContainsFold *string  `json:"nonceContainsFold,omitempty"`
+	// claims_user_id field predicates
+	ClaimsUserID             *string  `json:"claimsUserID,omitempty"`
+	ClaimsUserIDNeq          *string  `json:"claimsUserIDNEQ,omitempty"`
+	ClaimsUserIDIn           []string `json:"claimsUserIDIn,omitempty"`
+	ClaimsUserIDNotIn        []string `json:"claimsUserIDNotIn,omitempty"`
+	ClaimsUserIDGt           *string  `json:"claimsUserIDGT,omitempty"`
+	ClaimsUserIDGte          *string  `json:"claimsUserIDGTE,omitempty"`
+	ClaimsUserIDLt           *string  `json:"claimsUserIDLT,omitempty"`
+	ClaimsUserIDLte          *string  `json:"claimsUserIDLTE,omitempty"`
+	ClaimsUserIDContains     *string  `json:"claimsUserIDContains,omitempty"`
+	ClaimsUserIDHasPrefix    *string  `json:"claimsUserIDHasPrefix,omitempty"`
+	ClaimsUserIDHasSuffix    *string  `json:"claimsUserIDHasSuffix,omitempty"`
+	ClaimsUserIDEqualFold    *string  `json:"claimsUserIDEqualFold,omitempty"`
+	ClaimsUserIDContainsFold *string  `json:"claimsUserIDContainsFold,omitempty"`
+	// claims_username field predicates
+	ClaimsUsername             *string  `json:"claimsUsername,omitempty"`
+	ClaimsUsernameNeq          *string  `json:"claimsUsernameNEQ,omitempty"`
+	ClaimsUsernameIn           []string `json:"claimsUsernameIn,omitempty"`
+	ClaimsUsernameNotIn        []string `json:"claimsUsernameNotIn,omitempty"`
+	ClaimsUsernameGt           *string  `json:"claimsUsernameGT,omitempty"`
+	ClaimsUsernameGte          *string  `json:"claimsUsernameGTE,omitempty"`
+	ClaimsUsernameLt           *string  `json:"claimsUsernameLT,omitempty"`
+	ClaimsUsernameLte          *string  `json:"claimsUsernameLTE,omitempty"`
+	ClaimsUsernameContains     *string  `json:"claimsUsernameContains,omitempty"`
+	ClaimsUsernameHasPrefix    *string  `json:"claimsUsernameHasPrefix,omitempty"`
+	ClaimsUsernameHasSuffix    *string  `json:"claimsUsernameHasSuffix,omitempty"`
+	ClaimsUsernameEqualFold    *string  `json:"claimsUsernameEqualFold,omitempty"`
+	ClaimsUsernameContainsFold *string  `json:"claimsUsernameContainsFold,omitempty"`
+	// claims_email field predicates
+	ClaimsEmail             *string  `json:"claimsEmail,omitempty"`
+	ClaimsEmailNeq          *string  `json:"claimsEmailNEQ,omitempty"`
+	ClaimsEmailIn           []string `json:"claimsEmailIn,omitempty"`
+	ClaimsEmailNotIn        []string `json:"claimsEmailNotIn,omitempty"`
+	ClaimsEmailGt           *string  `json:"claimsEmailGT,omitempty"`
+	ClaimsEmailGte          *string  `json:"claimsEmailGTE,omitempty"`
+	ClaimsEmailLt           *string  `json:"claimsEmailLT,omitempty"`
+	ClaimsEmailLte          *string  `json:"claimsEmailLTE,omitempty"`
+	ClaimsEmailContains     *string  `json:"claimsEmailContains,omitempty"`
+	ClaimsEmailHasPrefix    *string  `json:"claimsEmailHasPrefix,omitempty"`
+	ClaimsEmailHasSuffix    *string  `json:"claimsEmailHasSuffix,omitempty"`
+	ClaimsEmailEqualFold    *string  `json:"claimsEmailEqualFold,omitempty"`
+	ClaimsEmailContainsFold *string  `json:"claimsEmailContainsFold,omitempty"`
+	// claims_email_verified field predicates
+	ClaimsEmailVerified    *bool `json:"claimsEmailVerified,omitempty"`
+	ClaimsEmailVerifiedNeq *bool `json:"claimsEmailVerifiedNEQ,omitempty"`
+	// claims_preferred_username field predicates
+	ClaimsPreferredUsername             *string  `json:"claimsPreferredUsername,omitempty"`
+	ClaimsPreferredUsernameNeq          *string  `json:"claimsPreferredUsernameNEQ,omitempty"`
+	ClaimsPreferredUsernameIn           []string `json:"claimsPreferredUsernameIn,omitempty"`
+	ClaimsPreferredUsernameNotIn        []string `json:"claimsPreferredUsernameNotIn,omitempty"`
+	ClaimsPreferredUsernameGt           *string  `json:"claimsPreferredUsernameGT,omitempty"`
+	ClaimsPreferredUsernameGte          *string  `json:"claimsPreferredUsernameGTE,omitempty"`
+	ClaimsPreferredUsernameLt           *string  `json:"claimsPreferredUsernameLT,omitempty"`
+	ClaimsPreferredUsernameLte          *string  `json:"claimsPreferredUsernameLTE,omitempty"`
+	ClaimsPreferredUsernameContains     *string  `json:"claimsPreferredUsernameContains,omitempty"`
+	ClaimsPreferredUsernameHasPrefix    *string  `json:"claimsPreferredUsernameHasPrefix,omitempty"`
+	ClaimsPreferredUsernameHasSuffix    *string  `json:"claimsPreferredUsernameHasSuffix,omitempty"`
+	ClaimsPreferredUsernameEqualFold    *string  `json:"claimsPreferredUsernameEqualFold,omitempty"`
+	ClaimsPreferredUsernameContainsFold *string  `json:"claimsPreferredUsernameContainsFold,omitempty"`
+	// connector_id field predicates
+	ConnectorID             *string  `json:"connectorID,omitempty"`
+	ConnectorIDNeq          *string  `json:"connectorIDNEQ,omitempty"`
+	ConnectorIDIn           []string `json:"connectorIDIn,omitempty"`
+	ConnectorIDNotIn        []string `json:"connectorIDNotIn,omitempty"`
+	ConnectorIDGt           *string  `json:"connectorIDGT,omitempty"`
+	ConnectorIDGte          *string  `json:"connectorIDGTE,omitempty"`
+	ConnectorIDLt           *string  `json:"connectorIDLT,omitempty"`
+	ConnectorIDLte          *string  `json:"connectorIDLTE,omitempty"`
+	ConnectorIDContains     *string  `json:"connectorIDContains,omitempty"`
+	ConnectorIDHasPrefix    *string  `json:"connectorIDHasPrefix,omitempty"`
+	ConnectorIDHasSuffix    *string  `json:"connectorIDHasSuffix,omitempty"`
+	ConnectorIDEqualFold    *string  `json:"connectorIDEqualFold,omitempty"`
+	ConnectorIDContainsFold *string  `json:"connectorIDContainsFold,omitempty"`
+	// token field predicates
+	Token             *string  `json:"token,omitempty"`
+	TokenNeq          *string  `json:"tokenNEQ,omitempty"`
+	TokenIn           []string `json:"tokenIn,omitempty"`
+	TokenNotIn        []string `json:"tokenNotIn,omitempty"`
+	TokenGt           *string  `json:"tokenGT,omitempty"`
+	TokenGte          *string  `json:"tokenGTE,omitempty"`
+	TokenLt           *string  `json:"tokenLT,omitempty"`
+	TokenLte          *string  `json:"tokenLTE,omitempty"`
+	TokenContains     *string  `json:"tokenContains,omitempty"`
+	TokenHasPrefix    *string  `json:"tokenHasPrefix,omitempty"`
+	TokenHasSuffix    *string  `json:"tokenHasSuffix,omitempty"`
+	TokenEqualFold    *string  `json:"tokenEqualFold,omitempty"`
+	TokenContainsFold *string  `json:"tokenContainsFold,omitempty"`
+	// obsolete_token field predicates
+	ObsoleteToken             *string  `json:"obsoleteToken,omitempty"`
+	ObsoleteTokenNeq          *string  `json:"obsoleteTokenNEQ,omitempty"`
+	ObsoleteTokenIn           []string `json:"obsoleteTokenIn,omitempty"`
+	ObsoleteTokenNotIn        []string `json:"obsoleteTokenNotIn,omitempty"`
+	ObsoleteTokenGt           *string  `json:"obsoleteTokenGT,omitempty"`
+	ObsoleteTokenGte          *string  `json:"obsoleteTokenGTE,omitempty"`
+	ObsoleteTokenLt           *string  `json:"obsoleteTokenLT,omitempty"`
+	ObsoleteTokenLte          *string  `json:"obsoleteTokenLTE,omitempty"`
+	ObsoleteTokenContains     *string  `json:"obsoleteTokenContains,omitempty"`
+	ObsoleteTokenHasPrefix    *string  `json:"obsoleteTokenHasPrefix,omitempty"`
+	ObsoleteTokenHasSuffix    *string  `json:"obsoleteTokenHasSuffix,omitempty"`
+	ObsoleteTokenEqualFold    *string  `json:"obsoleteTokenEqualFold,omitempty"`
+	ObsoleteTokenContainsFold *string  `json:"obsoleteTokenContainsFold,omitempty"`
+	// last_used field predicates
+	LastUsed      *time.Time   `json:"lastUsed,omitempty"`
+	LastUsedNeq   *time.Time   `json:"lastUsedNEQ,omitempty"`
+	LastUsedIn    []*time.Time `json:"lastUsedIn,omitempty"`
+	LastUsedNotIn []*time.Time `json:"lastUsedNotIn,omitempty"`
+	LastUsedGt    *time.Time   `json:"lastUsedGT,omitempty"`
+	LastUsedGte   *time.Time   `json:"lastUsedGTE,omitempty"`
+	LastUsedLt    *time.Time   `json:"lastUsedLT,omitempty"`
+	LastUsedLte   *time.Time   `json:"lastUsedLTE,omitempty"`
+}
+
 type Session struct {
 	ID        string    `json:"id"`
 	CreatedAt time.Time `json:"createdAt"`
