# internal/ent/generated/migrate/schema.go
@@ -122,6 +122,16 @@ var (
 	RefreshTokensColumns = []*schema.Column{
 		{Name: "id", Type: field.TypeString},
 		{Name: "client_id", Type: field.TypeString},
+		{Name: "nonce", Type: field.TypeString, Size: 2147483647},
+		{Name: "claims_user_id", Type: field.TypeString, Size: 2147483647},
+		{Name: "claims_username", Type: field.TypeString, Size: 2147483647},
+		{Name: "claims_email", Type: field.TypeString, Size: 2147483647},
+		{Name: "claims_email_verified", Type: field.TypeBool},
+		{Name: "claims_preferred_username", Type: field.TypeString, Size: 2147483647},
+		{Name: "connector_id", Type: field.TypeString, Size: 2147483647},
+		{Name: "token", Type: field.TypeString, Size: 2147483647},
+		{Name: "obsolete_token", Type: field.TypeString, Size: 2147483647},
+		{Name: "last_used", Type: field.TypeTime},
 	}
 	// RefreshTokensTable holds the schema information for the "refresh_tokens" table.
 	RefreshTokensTable = &schema.Table{
