# internal/ent/generated/ogent/responses.go
@@ -939,6 +939,16 @@ func NewRefreshTokenCreate(e *generated.RefreshToken) *RefreshTokenCreate {
 	var ret RefreshTokenCreate
 	ret.ID = e.ID
 	ret.ClientID = e.ClientID
+	ret.Nonce = e.Nonce
+	ret.ClaimsUserID = e.ClaimsUserID
+	ret.ClaimsUsername = e.ClaimsUsername
+	ret.ClaimsEmail = e.ClaimsEmail
+	ret.ClaimsEmailVerified = e.ClaimsEmailVerified
+	ret.ClaimsPreferredUsername = e.ClaimsPreferredUsername
+	ret.ConnectorID = e.ConnectorID
+	ret.Token = e.Token
+	ret.ObsoleteToken = e.ObsoleteToken
+	ret.LastUsed = e.LastUsed
 	return &ret
 }
 
@@ -967,6 +977,16 @@ func NewRefreshTokenList(e *generated.RefreshToken) *RefreshTokenList {
 	var ret RefreshTokenList
 	ret.ID = e.ID
 	ret.ClientID = e.ClientID
+	ret.Nonce = e.Nonce
+	ret.ClaimsUserID = e.ClaimsUserID
+	ret.ClaimsUsername = e.ClaimsUsername
+	ret.ClaimsEmail = e.ClaimsEmail
+	ret.ClaimsEmailVerified = e.ClaimsEmailVerified
+	ret.ClaimsPreferredUsername = e.ClaimsPreferredUsername
+	ret.ConnectorID = e.ConnectorID
+	ret.Token = e.Token
+	ret.ObsoleteToken = e.ObsoleteToken
+	ret.LastUsed = e.LastUsed
 	return &ret
 }
 
@@ -995,6 +1015,16 @@ func NewRefreshTokenRead(e *generated.RefreshToken) *RefreshTokenRead {
 	var ret RefreshTokenRead
 	ret.ID = e.ID
 	ret.ClientID = e.ClientID
+	ret.Nonce = e.Nonce
+	ret.ClaimsUserID = e.ClaimsUserID
+	ret.ClaimsUsername = e.ClaimsUsername
+	ret.ClaimsEmail = e.ClaimsEmail
+	ret.ClaimsEmailVerified = e.ClaimsEmailVerified
+	ret.ClaimsPreferredUsername = e.ClaimsPreferredUsername
+	ret.ConnectorID = e.ConnectorID
+	ret.Token = e.Token
+	ret.ObsoleteToken = e.ObsoleteToken
+	ret.LastUsed = e.LastUsed
 	return &ret
 }
 
@@ -1023,6 +1053,16 @@ func NewRefreshTokenUpdate(e *generated.RefreshToken) *RefreshTokenUpdate {
 	var ret RefreshTokenUpdate
 	ret.ID = e.ID
 	ret.ClientID = e.ClientID
+	ret.Nonce = e.Nonce
+	ret.ClaimsUserID = e.ClaimsUserID
+	ret.ClaimsUsername = e.ClaimsUsername
+	ret.ClaimsEmail = e.ClaimsEmail
+	ret.ClaimsEmailVerified = e.ClaimsEmailVerified
+	ret.ClaimsPreferredUsername = e.ClaimsPreferredUsername
+	ret.ConnectorID = e.ConnectorID
+	ret.Token = e.Token
+	ret.ObsoleteToken = e.ObsoleteToken
+	ret.LastUsed = e.LastUsed
 	return &ret
 }
 
